fixing overlap on chatsnavi bug

--- a/learnlink-ui/src/components/ChatsNavi.css
+++ b/learnlink-ui/src/components/ChatsNavi.css
@@ -1,15 +1,14 @@
 .messages-panel {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    overflow: hidden;
+
+    overflow-y: scroll;
     padding: 5px; /* Prevents overflow issues */
   }
   
   .ChatList {
-    flex-grow: 1;
-    overflow-y: auto; /* Enables scrolling when needed */
-    max-height: 100%;
+    overflow-y: scroll; /* Enables scrolling when needed */
+    max-height: 90%;
   }
 
   .blue-dot {
